--- a/themes/demo/pages/knowledge-hub.htm
+++ b/themes/demo/pages/knowledge-hub.htm
@@ -10,18 +10,14 @@ is_hidden = 0
     <div class="input-group search-group text-center">
         <input id="search-box" type="text"  class="form-control" placeholder="Have a question? Ask or enter a search term"/>
         <span class="input-group-addon">
-                <i class="glyphicon glyphicon-search"></i>
-            </span>
+            <i class="glyphicon glyphicon-search"></i>
+        </span>
     </div>
-
 </div>
 
 <div class="row text-center categories">
     <h3>Business categories</h3>
     <p>Select a category to view the most frequently asked questions for that section</p>
-</div>
-
-<div class="row categories">
     <div class="row">
         <div class="center-80pc">
             <div class="col-md-3 text-center">
@@ -50,9 +46,6 @@ is_hidden = 0
             </div>
         </div>
     </div>
-</div>
-
-<div class="row categories">
     <div class="row">
         <div class="center-80pc">
             <div class="col-md-3 text-center">
@@ -83,14 +76,43 @@ is_hidden = 0
     </div>
 </div>
 
+<div class="row center-80pc">
+    <h3>Most recent knowledge</h3>
+    <p>Take a look at the most recent knowledge articles here</p>
 
+    <div class="col-md-4">
+        <h4 class="pink-text">Accounting</h4>
+        <ul class="recent-knowledge">
+            <li class="recent-topic pink-bullet">VAT: How does it affect my small business?</li>
+            <li class="recent-topic pink-bullet">What do I do if my business is failing?</li>
+            <li class="recent-topic pink-bullet">What's an Individual Voluntary Arrangement?</li>
+            <li class="recent-topic pink-bullet">Can you actually save money on Business Tax?</li>
+            <li class="recent-topic pink-bullet">Can High Street stores really win against online shopping?</li>
+            <li class="recent-topic pink-bullet">How to transfer your business assets</li>
+        </ul>
+    </div>
 
+    <div class="col-md-4">
+        <h4 class="green-text">Finance & Funding</h4>
+        <ul class="recent-knowledge">
+            <li class="recent-topic green-bullet">VAT: How does it affect my small business?</li>
+            <li class="recent-topic green-bullet">What do I do if my business is failing?</li>
+            <li class="recent-topic green-bullet">What's an Individual Voluntary Arrangement?</li>
+            <li class="recent-topic green-bullet">Can you actually save money on Business Tax?</li>
+            <li class="recent-topic green-bullet">Can High Street stores really win against online shopping?</li>
+            <li class="recent-topic green-bullet">How to transfer your business assets</li>
+        </ul>
+    </div>
 
-
-
-<br><br><br><br><br>
-<h1>Knowledge Hub</h1>
-<h2>amazing</h2>
-<h3>wow</h3>
-
-
+    <div class="col-md-4">
+        <h4 class="yellow-text">Legal</h4>
+        <ul class="recent-knowledge">
+            <li class="recent-topic yellow-bullet">VAT: How does it affect my small business?</li>
+            <li class="recent-topic yellow-bullet">What do I do if my business is failing?</li>
+            <li class="recent-topic yellow-bullet">What's an Individual Voluntary Arrangement?</li>
+            <li class="recent-topic yellow-bullet">Can you actually save money on Business Tax?</li>
+            <li class="recent-topic yellow-bullet">Can High Street stores really win against online shopping?</li>
+            <li class="recent-topic yellow-bullet">How to transfer your business assets</li>
+        </ul>
+    </div>
+</div>
