Front page pretty much finished

--- a/themes/demo/pages/knowledge-hub.htm
+++ b/themes/demo/pages/knowledge-hub.htm
@@ -7,12 +7,19 @@ is_hidden = 0
     <h1 id="welcome-header">Welcome to the Business Hub</h1>
     <p>Thanks for visiting our business hub - find out information about business here.</p>
 
-    <div class="input-group search-group text-center">
-        <input id="search-box" type="text"  class="form-control" placeholder="Have a question? Ask or enter a search term"/>
-        <span class="input-group-addon">
-            <i class="glyphicon glyphicon-search"></i>
-        </span>
+    <div class="row">
+        <div id="custom-search-input">
+            <div class="input-group col-md-12">
+                <input type="text" id="search-box" class=" form-control" placeholder="Have a question? Ask or enter a search term" />
+                <!--<span class="input-group-btn">-->
+                    <!--<button class="btn btn-danger" type="button" id="search-btn">-->
+                        <!--<span class=" glyphicon glyphicon-search"></span>-->
+                    <!--</button>-->
+                <!--</span>-->
+            </div>
+        </div>
     </div>
+
 </div>
 
 <div class="row text-center categories">
