Partway through selecting all valid posts from db

--- a/themes/bc/content/root.htm
+++ b/themes/bc/content/root.htm
@@ -1,2 +1,3 @@
 <h1>Business Comparison Knowledge Hub</h1>
 <p>Placeholder page for <a href="https://www.businesscomparison.com/">Business Comparison</a> home page</p>
+<p>Knowledge Hub home page is <a href="/knowledge-hub">here</a></p>
