--- a/themes/bc/pages/root.htm
+++ b/themes/bc/pages/root.htm
@@ -5,6 +5,6 @@ is_hidden = 0
 ==
 <div class="jumbotron">
     <div class="container">
-        {% content "welcome.htm" %}
+        {% content "root.htm" %}
     </div>
 </div>
