Category homepage complete!

--- a/themes/bc/pages/article.htm
+++ b/themes/bc/pages/article.htm
@@ -9,8 +9,29 @@ categoryPage = "{{ /knowledge-hub/category/:category }}"
 ==
 function onStart()
 {
-$this['category'] = $this->param('category');
-$this['slug'] = $this->param('slug');
+
+    $db_categories = Db::table('rainlab_blog_categories')->get();
+
+    $cat_list = array();
+
+    foreach ($db_categories as $category) {
+    array_push($cat_list, $category);
+    }
+
+    $this['category_count'] = sizeof($cat_list);
+    $this['categories'] = $cat_list;
+
+    $master_table = DB::table('rainlab_blog_posts_categories')
+                        -> join('rainlab_blog_posts', 'rainlab_blog_posts_categories.post_id', '=', 'rainlab_blog_posts.id')
+                        -> join('backend_users', 'rainlab_blog_posts.user_id', '=', 'backend_users.id')
+                        -> where('rainlab_blog_posts.slug', '=', $this -> id)
+                        -> where('rainlab_blog_posts.published', '=', 1)
+                        -> select('title', 'slug', 'content_html', 'excerpt', 'first_name', 'last_name', 'published_at')
+                        -> orderBy('published_at', 'desc')
+                        -> take(5)
+                        -> get();
+
+    $article =
 }
 ==
 <section id="sub-header">
