--- a/themes/bc/pages/article.htm
+++ b/themes/bc/pages/article.htm
@@ -15,39 +15,135 @@ function onStart()
     $cat_list = array();
 
     foreach ($db_categories as $category) {
-    array_push($cat_list, $category);
+        array_push($cat_list, $category);
     }
 
+    $current_category = $db_categories
+                        -> where('slug', $this -> param('category'))
+                        -> first();
+
+    $this['category'] = $current_category;
     $this['category_count'] = sizeof($cat_list);
     $this['categories'] = $cat_list;
 
-    $master_table = DB::table('rainlab_blog_posts_categories')
+    $article = DB::table('rainlab_blog_posts_categories')
                         -> join('rainlab_blog_posts', 'rainlab_blog_posts_categories.post_id', '=', 'rainlab_blog_posts.id')
                         -> join('backend_users', 'rainlab_blog_posts.user_id', '=', 'backend_users.id')
-                        -> where('rainlab_blog_posts.slug', '=', $this -> id)
+                        -> where('rainlab_blog_posts.slug', '=', $this->param('slug'))
+                        -> select('title', 'slug', 'content_html', 'excerpt', 'first_name', 'last_name', 'published_at', 'category_id')
+                        -> first();
+
+    $this['article'] = $article;
+
+
+    ############################
+
+    # These aren't 'related', just recent
+    $related_articles = DB::table('rainlab_blog_posts_categories')
+                        -> join('rainlab_blog_posts', 'rainlab_blog_posts_categories.post_id', '=', 'rainlab_blog_posts.id')
+                        -> join('backend_users', 'rainlab_blog_posts.user_id', '=', 'backend_users.id')
+                        -> where('rainlab_blog_posts_categories.category_id', '=', $current_category->id)
                         -> where('rainlab_blog_posts.published', '=', 1)
                         -> select('title', 'slug', 'content_html', 'excerpt', 'first_name', 'last_name', 'published_at')
                         -> orderBy('published_at', 'desc')
-                        -> take(5)
+                        -> take(3)
                         -> get();
 
-    $article =
+    $related_array = array();
+
+    foreach ($related_articles as $rel_article) {
+        array_push($related_array, $rel_article);
+    }
+
+    $this['related_articles'] = $related_array;
+
+    ############################
+
 }
 ==
-<section id="sub-header">
-    <div class="row top-container">
-        <div class="center-80pc">
-            <h1 id="category-title">{{ category }}</h1>
+
+{% if (article.title != NULL) %}
+
+    <section id="sub-header">
+        <div class="row top-container col-md-12">
+            <div class="center-80pc">
+                <h1 id="category-header">{{ category.name }}</h1>
+            </div>
+        </div>
+    </section>
+
+    <div class="row center-80pc">
+        <section id="current-path">
+            <div class="row col-md-12">
+                <p class="current-path">
+                    <a class="current-path" href="/">Home</a>
+                    <span class="glyphicon glyphicon-chevron-right current-path"></span>
+                    <a class="current-path" href="/knowledge-hub">The Business Hub</a>
+                    <span class="glyphicon glyphicon-chevron-right current-path"></span>
+                    <a class="current-path" href="/knowledge-hub/category/{{ category.slug }}">{{ category.name }}</a>
+                    <span class="glyphicon glyphicon-chevron-right current-path"></span>
+                    <a class="current-path" href="/knowledge-hub/category/{{ category.slug }}">Articles</a>
+                    <span class="glyphicon glyphicon-chevron-right current-path"></span>
+                    {% if (article.title|length > 20) %}
+                        {% set sliced_title = article.title|slice(0, 20) ~ '...' %}
+                    {% else %}
+                        {% set sliced_title = article.title %}
+                    {% endif %}
+                    {{ sliced_title }}
+                </p>
+            </div>
+        </section>
+        <div class="col-md-8">
+            <section id="article">
+                <div class="row">
+                    <h2 class="article-title">{{ article.title }}</h2>
+                </div>
+                <div class="row">
+                    <p>Author: <strong>{{ article.first_name }} {{ article.last_name }}</strong></p>
+                </div>
+                <br>
+                <div class="row">
+                    {{ article.content_html|raw }}
+                </div>
+            </section>
+        </div>
+        <div class="col-md-offset-1 col-md-3">
+            <section id="category-sidebar">
+                <h3 class="no-margin-top">Categories</h3>
+                <br>
+                <ul class="list-unstyled">
+                    {% set sidebar_count = 0 %}
+                    {% for category in categories %}
+                        {% set sidebar_count = sidebar_count + 1 %}
+                        <li><p style="font-size: 14pt"><a href="/knowledge-hub/category/{{ category.slug }}">{{ category.name }}</a></p></li>
+                        {% if (sidebar_count < category_count) %}
+                            <li><hr style="margin: 15px 0"></li>
+                        {%  endif %}
+                    {% endfor %}
+                </ul>
+            </section>
         </div>
     </div>
-</section>
+    <hr class="center-80pc">
+    <section id="related-articles" class="center-80pc">
+        <h3>Related Articles</h3>
+        <div class="row">
+            {% for rel_article in related_articles %}
+                <div class="col-md-4">
+                    <div class="related-article">
+                        <h2 class="no-margin-top"><a class="article-title" style="font-size: 18pt"
+                            href="/knowledge-hub/category/{{ category.slug }}/{{ rel_article.slug }}">
+                            {{ rel_article.title }}</a></h2>
+                        <p>Author: <strong>{{ rel_article.first_name }} {{ rel_article.last_name }}</strong></p>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+    </section>
 
-<div class="center-80pc">
 
-    <h1 id="article-title">{{ slug }}</h1>
 
-    {% component 'blogPost' %}
 
-    <br><br><br>
-
-</div>
+{% else %}
+    {% content "404.htm" %}
+{% endif %}
