--- a/themes/bc/pages/article.htm
+++ b/themes/bc/pages/article.htm
@@ -118,6 +118,8 @@ function onStart()
                         <li><p style="font-size: 14pt"><a href="/knowledge-hub/category/{{ category.slug }}">{{ category.name }}</a></p></li>
                         {% if (sidebar_count < category_count) %}
                             <li><hr style="margin: 15px 0"></li>
+                        {% else %}
+                            <br>
                         {%  endif %}
                     {% endfor %}
                 </ul>
