Category/Article validation added to relevant pages to avoid db errors

--- a/themes/bc/pages/article.htm
+++ b/themes/bc/pages/article.htm
@@ -14,51 +14,56 @@ function onStart()
 
     $cat_list = array();
 
+    $valid_category = false;
+
     foreach ($db_categories as $category) {
+        if ($category->slug == $this -> param('category')) { $valid_category = true; }
         array_push($cat_list, $category);
     }
 
-    $current_category = $db_categories
-                        -> where('slug', $this -> param('category'))
-                        -> first();
+    if ($valid_category) {
 
-    $this['category'] = $current_category;
-    $this['category_count'] = sizeof($cat_list);
-    $this['categories'] = $cat_list;
+        $current_category = $db_categories
+                            -> where('slug', $this -> param('category'))
+                            -> first();
 
-    $article = DB::table('rainlab_blog_posts_categories')
-                        -> join('rainlab_blog_posts', 'rainlab_blog_posts_categories.post_id', '=', 'rainlab_blog_posts.id')
-                        -> join('backend_users', 'rainlab_blog_posts.user_id', '=', 'backend_users.id')
-                        -> where('rainlab_blog_posts.slug', '=', $this->param('slug'))
-                        -> select('title', 'slug', 'content_html', 'excerpt', 'first_name', 'last_name', 'published_at', 'category_id')
-                        -> first();
+        $this['category'] = $current_category;
+        $this['category_count'] = sizeof($cat_list);
+        $this['categories'] = $cat_list;
 
-    $this['article'] = $article;
+        $article = DB::table('rainlab_blog_posts_categories')
+                            -> join('rainlab_blog_posts', 'rainlab_blog_posts_categories.post_id', '=', 'rainlab_blog_posts.id')
+                            -> join('backend_users', 'rainlab_blog_posts.user_id', '=', 'backend_users.id')
+                            -> where('rainlab_blog_posts.slug', '=', $this->param('slug'))
+                            -> select('title', 'slug', 'content_html', 'excerpt', 'first_name', 'last_name', 'published_at', 'category_id')
+                            -> first();
+
+        $this['article'] = $article;
 
 
-    ############################
+        ############################
 
-    # These aren't 'related', just recent
-    $related_articles = DB::table('rainlab_blog_posts_categories')
-                        -> join('rainlab_blog_posts', 'rainlab_blog_posts_categories.post_id', '=', 'rainlab_blog_posts.id')
-                        -> join('backend_users', 'rainlab_blog_posts.user_id', '=', 'backend_users.id')
-                        -> where('rainlab_blog_posts_categories.category_id', '=', $current_category->id)
-                        -> where('rainlab_blog_posts.published', '=', 1)
-                        -> select('title', 'slug', 'content_html', 'excerpt', 'first_name', 'last_name', 'published_at')
-                        -> orderBy('published_at', 'desc')
-                        -> take(3)
-                        -> get();
+        # These aren't 'related', just recent
+        $related_articles = DB::table('rainlab_blog_posts_categories')
+                            -> join('rainlab_blog_posts', 'rainlab_blog_posts_categories.post_id', '=', 'rainlab_blog_posts.id')
+                            -> join('backend_users', 'rainlab_blog_posts.user_id', '=', 'backend_users.id')
+                            -> where('rainlab_blog_posts_categories.category_id', '=', $current_category->id)
+                            -> where('rainlab_blog_posts.published', '=', 1)
+                            -> select('title', 'slug', 'content_html', 'excerpt', 'first_name', 'last_name', 'published_at')
+                            -> orderBy('published_at', 'desc')
+                            -> take(3)
+                            -> get();
 
-    $related_array = array();
+        $related_array = array();
 
-    foreach ($related_articles as $rel_article) {
-        array_push($related_array, $rel_article);
+        foreach ($related_articles as $rel_article) {
+            array_push($related_array, $rel_article);
+        }
+
+        $this['related_articles'] = $related_array;
+
+        ############################
     }
-
-    $this['related_articles'] = $related_array;
-
-    ############################
-
 }
 ==
 
