--- a/themes/bc/pages/category.htm
+++ b/themes/bc/pages/category.htm
@@ -18,39 +18,50 @@ function onStart()
 
     $cat_list = array();
 
+    $valid_category = false;
+
     foreach ($db_categories as $category) {
+        if ($category->slug == $this -> param('category')) { $valid_category = true; }
         array_push($cat_list, $category);
     }
 
-    $this['category_count'] = sizeof($cat_list);
-    $this['categories'] = $cat_list;
+    $this['valid_category'] = $valid_category;
 
-    $current_category = $db_categories
-                    -> where('slug', $this -> param('category'))
-                    -> first();
+    if ($valid_category) {
 
-    $this['category'] = $current_category;
+        $this['category_count'] = sizeof($cat_list);
+        $this['categories'] = $cat_list;
 
-    $master_table = DB::table('rainlab_blog_posts_categories')
-                    -> join('rainlab_blog_posts', 'rainlab_blog_posts_categories.post_id', '=', 'rainlab_blog_posts.id')
-                    -> join('backend_users', 'rainlab_blog_posts.user_id', '=', 'backend_users.id')
-                    -> where('rainlab_blog_posts_categories.category_id', '=', $current_category->id)
-                    -> where('rainlab_blog_posts.published', '=', 1)
-                    -> select('title', 'slug', 'content_html', 'excerpt', 'first_name', 'last_name', 'published_at')
-                    -> orderBy('published_at', 'desc')
-                    -> take(5)
-                    -> get();
+        $current_category = $db_categories
+                        -> where('slug', $this -> param('category'))
+                        -> first();
 
-    $articles = array();
-    foreach ($master_table as $post) {
-        array_push($articles, $post);
+        $this['category'] = $current_category;
+
+
+
+
+        $master_table = DB::table('rainlab_blog_posts_categories')
+                        -> join('rainlab_blog_posts', 'rainlab_blog_posts_categories.post_id', '=', 'rainlab_blog_posts.id')
+                        -> join('backend_users', 'rainlab_blog_posts.user_id', '=', 'backend_users.id')
+                        -> where('rainlab_blog_posts_categories.category_id', '=', $current_category->id)
+                        -> where('rainlab_blog_posts.published', '=', 1)
+                        -> select('title', 'slug', 'content_html', 'excerpt', 'first_name', 'last_name', 'published_at')
+                        -> orderBy('published_at', 'desc')
+                        -> take(5)
+                        -> get();
+
+        $articles = array();
+        foreach ($master_table as $post) {
+            array_push($articles, $post);
+        }
+
+        $this['articles'] = $articles;
     }
-
-    $this['articles'] = $articles;
 }
 ==
 
-{% if (category.name != NULL) %}
+{% if (valid_category) %}
 
     <section id="sub-header">
         <div class="row top-container col-md-12">
